--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,13 @@
-Galpões & Estoque
+<h1>Galpões & Estoque</h1>
+
+<h2>Galpões</h2>
+<% if @warehouses.empty? %>
+  <p>Não existem galpões cadastrados</p>
+<% else %>
+  <% @warehouses.each do |warehouse| %>
+    <%= warehouse.name %>
+    Código: <%= warehouse.code %>
+    Cidade: <%= warehouse.city %>
+    <%= warehouse.area %> m²
+  <% end %>
+<% end %>
