--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,18 @@
-<h1>Galpões & Estoque</h1>
-
-<h2>Galpões</h2>
 <% if @warehouses.empty? %>
-  <p>Não existem galpões cadastrados</p>
-<% else %>
-  <% @warehouses.each do |warehouse| %>
-    <dl>
-      <dt> <%= link_to warehouse.name, warehouse_path(warehouse.id) %> </dt>
-      <dd> Código: <%= warehouse.code %> </dd>
-      <dd> Cidade: <%= warehouse.city %> </dd>
-      <dd> <%= warehouse.area %> m² </dd>
-    </dl>
-  <% end %>
+    <p>Não existem galpões cadastrados</p>
+  <% else %>
+    <% @warehouses.each do |warehouse| %>
+      <div>
+        <h3> <%= link_to warehouse.name, warehouse_path(warehouse.id) %> </h3>
+
+        <dl>
+          <dt> <strong>Código:</strong> </dt>
+          <dd>  <%= warehouse.code %> </dd>
+          <dt> <strong>Cidade:</strong> </dt>
+          <dd> <%= warehouse.city %>  </dd>
+          <dt> <strong>Área:</strong> </dt>
+          <dd> <%= warehouse.area %> m² </dd>
+        </dl>
+      </div>
+    <% end %>
 <% end %>
