--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <h1>Galpões & Estoques</h1>
+    </header>
+
+    <main>
+      <%= yield %>
+    </main>
   </body>
 </html>
