--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,9 @@
+<h2>Galpões</h2>
+
+<div>
+  <%= link_to 'Cadastrar Galpão', new_warehouse_path %>
+</div>
+
 <% if @warehouses.empty? %>
     <p>Não existem galpões cadastrados</p>
   <% else %>
