Adicionando menssagem de galpão cadastrado com sucesso

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <h2>Galpões</h2>
 
 <div>
-  <%= link_to 'Cadastrar Galpão', new_warehouse_path %>
+  <%= flash[:notice] %>
 </div>
 
 <% if @warehouses.empty? %>
