--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,14 @@
     </header>
 
     <main>
+      <% if %w[index show].include? params[:action] %>
+        <div> </div><%= link_to 'Cadastrar Galpão', new_warehouse_path %> </div>
+      <% end %>
+
+      <% if flash[:notice] %>
+        <div> <%= flash[:notice] %> </div>
+      <% end %>
+
       <%= yield %>
     </main>
   </body>
