--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -7,6 +7,7 @@
   <p style="font-size: 14pt"><%= @warehouse.description %> </p>
 </div>
 
-<%= link_to 'Voltar', root_path %>
+<%= link_to 'Editar', edit_warehouse_path(@warehouse.id) %> |
+<%= link_to 'Voltar', root_path %> 
 
 
