--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -7,7 +7,12 @@
   <p style="font-size: 14pt"><%= @warehouse.description %> </p>
 </div>
 
-<%= link_to 'Editar', edit_warehouse_path(@warehouse.id) %> |
-<%= link_to 'Voltar', root_path %> 
+<div>
+  <%= link_to 'Editar', edit_warehouse_path(@warehouse.id) %>
+  <%= button_to 'Remover', warehouse_path(@warehouse.id), method: :delete %> 
+</div>
 
+<div>
+  <%= link_to 'Voltar', root_path %> 
+</div>
 
