--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
   <body>
     <header>
       <h1>Galpões & Estoques</h1>
+      <ul>
+        <li>
+          <%= link_to 'Fornecedores', suppliers_path %>
+        </li>
+      </ul>
     </header>
 
     <main>
