--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,27 @@
  *= require_tree .
  *= require_self
  */
+
+table {
+  margin-top: 20px;
+  background-color: black;
+  border-radius: 5px;
+}
+
+table thead {
+  background-color: #515151;
+  color: #ffffff
+}
+
+table tbody tr {
+  background-color: #fff;
+}
+
+table tbody tr td:first-of-type a{
+  text-decoration: none;
+  font-weight: bold;
+}
+
+table tbody td {
+  padding: 5px 10px;
+}
