--- a/app/views/suppliers/_form.html.erb
+++ b/app/views/suppliers/_form.html.erb
@@ -9,7 +9,7 @@
   </div>
 <% end %>
 
-<%= form_with model: @supplier, local: true do |form| %>
+<%= form_with model: @supplier do |form| %>
   <div>
     <%= form.label :brand_name %>
     <%= form.text_field :brand_name %>
@@ -40,6 +40,6 @@
     <%= form.phone_field :phone_number %>
   </div>
 
-  <%= form.submit 'Cadastrar Fornecedor' %>
+  <%= form.submit %>
 
 <% end %>
