--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -19,7 +19,7 @@
     <tbody>
       <% @suppliers.each do |supplier| %>
         <tr> 
-          <td> <%= link_to supplier.brand_name %> </td>
+          <td> <%= link_to supplier.brand_name, supplier_path(supplier) %> </td>
           <td> <%= supplier.corporate_name %> </td>
           <td> <%= supplier.registered_number %> </td>
           <td> <%= supplier.full_address %> </td>
