Usuário cadastra modelo de produtos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,17 @@
   <body>
     <header>
       <h1>Galpões & Estoques</h1>
-      <ul>
-        <li>
-          <%= link_to 'Fornecedores', suppliers_path %>
-        </li>
-      </ul>
+      
+      <nav>
+        <ul>
+          <li>
+            <%= link_to 'Fornecedores', suppliers_path %>
+          </li>
+          <li>
+            <%= link_to 'Modelos de produtos', product_models_path %>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main>
