--- a/app/views/product_models/_form.html.erb
+++ b/app/views/product_models/_form.html.erb
@@ -42,7 +42,7 @@
 
   <div>
     <%= form.label :supplier_id %>
-    <%= form.collection_select :supplier_id, Supplier.all, :id, :brand_name, prompt: true %>
+    <%= form.collection_select :supplier_id, @suppliers, :id, :brand_name, prompt: true %>
   </div>
 
   <%= form.submit %>
